--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,8 @@
             <input type="password" id="contrasena2" name="contrasena2" placeholder="Contraseña">
             <button class="button">Login</button>
             <p id="erroreak" class="error_message">
-              <div class="error_message">{{ error }}</div>
+              <div class="error_message">{{ error1 }}</div>
+              {{error1}}
             </p>
           </form>
         </div>
