--- a/app/static/css/proyecto.css
+++ b/app/static/css/proyecto.css
@@ -13,7 +13,9 @@ html {
 	background: 
 		linear-gradient(rgba(68, 163, 109, 0.6), rgba(28, 124, 95, 0.6));
 }
-
+a {
+    text-decoration: none;
+}
 header {
     text-align: center;
 }
