--- a/app/templates/user_menu.html
+++ b/app/templates/user_menu.html
@@ -14,17 +14,19 @@
         </header>
 		<br>
 		<div class="laukia">
-			<a href="{{ url_for('create_project') }}"><button class="create_button"></button><h3>Crear nuevo proyecto</h3></button></a> 
-			&nbsp
-			<button class="create_button"><a href="{{ url_for('join_project') }}"><h3>Acceder a proyecto</h3></a></button>  
-  
+			
 			<h3>Lista de proyectos:</h3>
-            {% for proyecto in datos['proyectos'] %}
-                <button>{{ datos['nombre'] }}</button>
-            {% endfor %}
-			{% if datos['proyectos']|length == 0 %}
+			{% if datos['info']|length == 0 %}
 				<p>No hay proyectos</p>
+			{% else %}	
+				{% for proyecto in datos['info'] %}
+                	<button><a href="{{ url_for('project_menu', idproyecto=proyecto['idproyecto']) }}"><p>{{ proyecto['nombre'] }}</p></a></button>
+            	{% endfor %}
 			{% endif %}
+			&nbsp
+			<button class="create_button"><a href="{{ url_for('create_project') }}"><p>Crear nuevo proyecto</p></a></button>
+			<button class="create_button"><a href="{{ url_for('join_project') }}"><p>Acceder a proyecto</p></a></button>
+  
         </div>
 	</body>
 </html>
