--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,16 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     </head>
     <body>
+      <header>
+        <br>
+        <br>
+        <br>
+        <!--CAMBIA EL INDEX QUE ESTO ESTA MAL HECHO-->
+        <br>
+        <br>
+        <br>
+        <br>
+      </header>
       <div class="container">
         <div class="message signup">
         <div class="form--heading">Welcome back! </div>
