--- a/app/templates/transaction_menu.html
+++ b/app/templates/transaction_menu.html
@@ -10,8 +10,8 @@
         <h2 class="fs-title">Añade transacción</h2>
         <input type="text" id="nombre" name="nombre" placeholder="Nombre de la transacción" required>
         <div class="contenedor-botones">
-            <input type="radio" name="opcion" value="true"> Añadir gasto
-            <input type="radio" name="opcion" value="false"> Añadir saldo
+            <input type="radio" name="opcion" value="TRUE"> Añadir gasto
+            <input type="radio" name="opcion" value="FALSE"> Añadir saldo
         </div>
         <button>Crear</button>
         <p id="erroreak" class="error_message">
