--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/proyecto.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
 		<link rel="shortcut icon" href="{{ url_for('static', filename='image/user.jpg') }}">
@@ -20,6 +21,7 @@
 				<p>ID del proyecto: {{ datos['idproyecto'] }}</p>
 				<h1><a href="{{ url_for('user_menu') }}"><i class="fas fa-home"></i> Menu de proyectos</a></h1>
 				<h1><a href="{{ url_for('project_menu') }}"><i class="fas fa-lightbulb"></i> Información de proyecto</a></h1>
+				<h1><a href="{{ url_for('dashboards') }}"><i class="fas fa-circle"></i> Dashboards </a></h1>
 				<h1><a href="{{ url_for('transaction_menu') }}"><i class="fas fa-euro-sign"></i> Nueva transacción</a></h1>
 				<h1><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a></h1>
 			</div>
