--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -14,9 +14,9 @@ form {
 body {
   background: #29a37a;
   font-family: "Source Sans Pro", sans-serif;
-  overflow: hidden;
   
 }
+
 .navtop {
   background-color: #02281c;
   height: 60px;
@@ -201,6 +201,8 @@ margin: 0 0 10px 0;
 .form {
   width: 100%;
   height: 100%;
+  
+
 
   &--heading {
     font-size: 25px;
@@ -272,17 +274,20 @@ table th{
 }
 
 .laukia {
-  display: flex;
-  justify-content: center;
-  position: center;
+  position: relative;
   z-index: 1;
   background: #FFFFFF;
   width: 60%;
   margin: 0 auto 100px;
   padding: 45px;
+  position: relative;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
 .laukia a:hover {
   text-decoration: none; /* Elimina el subrayado */
   color: #fff;
