--- a/app/templates/project_menu.html
+++ b/app/templates/project_menu.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-
+<h2>Total de presupuesto utilizado:</h2>
 <div class="contenedor-donuts">
   <div class="svg-item">
     <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
@@ -23,23 +23,6 @@
       </g>
     </svg>
   </div>
-  
-  <div class="svg-item">
-    <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
-      <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
-      <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-4" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="1 99" stroke-dashoffset="25"></circle>
-      <g class="donut-text donut-text-3">
-  
-        <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent">1%</tspan>   
-        </text>
-        <text y="60%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-data">50 widgets</tspan>   
-        </text>
-      </g>
-    </svg>
-  </div>
-</div>
+
       
 {% endblock %}
