--- a/app/templates/dashboards.html
+++ b/app/templates/dashboards.html
@@ -12,11 +12,11 @@
     <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
       <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
       <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="30 70" stroke-dashoffset="25"></circle>
+      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="{{ 100 - datos['datos']['restante'] }} {{ datos['datos']['restante'] }}" stroke-dashoffset="25"></circle>
       <g class="donut-text donut-text-2">
   
         <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent">{{ int(datos['presupuesto'] / datos['datos']['presupuestoInicial'] * 100) | format('%') }}</tspan>   
+          <tspan x="50%" text-anchor="middle" class="donut-percent">{{ 100 - datos['datos']['restante'] }}%</tspan>   
         </text>
         <text y="60%" transform="translate(0, 2)">
           <tspan x="50%" text-anchor="middle" class="donut-data">Total</tspan>   
@@ -30,21 +30,25 @@
 <h2>Presupuesto por categoria:</h2>
 <div class="contenedor-donuts">
   {% for categoria, valor in datos['datos']['categorias'] %}
-  <div class="svg-item">
-    <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
-      <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
-      <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="30 70" stroke-dashoffset="25"></circle>
-      <g class="donut-text donut-text-2">
-  
-        <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent"> {{ int(valor / datos['datos']['presupuestoInicial'] * 100) | format('%') }} </tspan>   
-        </text>
-        <text y="60%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-data"> {{ categoria }}</tspan>   
-        </text>
-      </g>
-    </svg>
+    {% if valor is None %}
+    <br>
+    {% else %}
+      <div class="svg-item">
+        <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
+          <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
+          <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
+          <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="{{ valor }} {{ 100 - valor }}" stroke-dashoffset="25"></circle>
+          <g class="donut-text donut-text-2">
+      
+            <text y="50%" transform="translate(0, 2)">
+              <tspan x="50%" text-anchor="middle" class="donut-percent"> {{ valor }}% </tspan>   
+            </text>
+            <text y="60%" transform="translate(0, 2)">
+              <tspan x="50%" text-anchor="middle" class="donut-data"> {{ categoria }}</tspan>   
+            </text>
+          </g>
+        </svg>
+    {% endif %}
   {% endfor %}
 </div>
 
