--- a/app/templates/dashboards.html
+++ b/app/templates/dashboards.html
@@ -4,7 +4,6 @@
 
 {% block content %}
 
-{{datos}}
 
 <h2>Total de presupuesto utilizado:</h2>
 <div class="contenedor-donuts">
@@ -24,15 +23,14 @@
       </g>
     </svg>
   </div>
+</div>
 
   <br>
 
-<h2>Presupuesto por categoria:</h2>
-<div class="contenedor-donuts">
-  {% for categoria, valor in datos['datos']['categorias'] %}
-    {% if valor is None %}
-    <br>
-    {% else %}
+<h2>Presupuesto por categorias:</h2>
+  {% for chunk in datos['datos']['categorias'].items()|batch(2) %}
+  <div class="contenedor-donuts">
+    {% for categoria, valor in chunk %}
       <div class="svg-item">
         <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
           <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
@@ -48,26 +46,10 @@
             </text>
           </g>
         </svg>
-    {% endif %}
-  {% endfor %}
+        <p>{{ categoria }}</p>
+    </div>
+    {% endfor %}
 </div>
+  {% endfor %}
 
-<div class="contenedor-donuts">
-  <div class="svg-item">
-    <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
-      <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
-      <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="30 70" stroke-dashoffset="25"></circle>
-      <g class="donut-text donut-text-2">
-  
-        <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent">20%</tspan>   
-        </text>
-        <text y="60%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-data">1500 widgets</tspan>   
-        </text>
-      </g>
-    </svg>
-  </div>
-      
 {% endblock %}
