--- a/app/templates/transaction_menu.html
+++ b/app/templates/transaction_menu.html
@@ -3,6 +3,7 @@
 {% block title %}Transaccion{% endblock %}
 
 {% block content %}
+{{datos}}
 <form autocomplete="off" id="msform" method="POST" action="{{ url_for('transaction_menu') }}">
 
     <fieldset>
@@ -11,53 +12,56 @@
 
         <label class="p_text" for="opciones">Especifica si los elementos del siguiente apartado son:</label>
         <div id="opciones" name="opciones" class="contenedor-botones">
-            <input type="radio" name="opcion" value="1"> Gastos
+            <input type="radio" name="opcion" value="1" checked> Gastos
             <input type="radio" name="opcion" value="0"> Ganancias
         </div>
         
         <h2 class="fs-subtitle">Productos</h2>
 
-        <div id="elementosDinamicos" name="elementosDinamicos">
-            <input class="nuevo_producto_valor" type="text" id="nombreproducto[]" name="nombreproducto[]" placeholder="Nombre del producto" required>
-            <input class="nuevo_producto_valor" type="number" id="cantidad[]" name="cantidad[]" placeholder="Cantidad" required>
-            <input class="nuevo_producto_valor" type="number" id="precio[]" name="precio[]" step="0.01" placeholder="Precio por unidad" required>
-            <label class="p_text" for="categoria[]">Especifica la categoria del producto (si no está entre las opciones marca "Otros"):</label>
-            <select class="select-transaccion" id="categoria[]" name="categoria[]" required>
-                <option value="Comida">Comida</option>
-                <option value="Vivienda">Vivienda</option>
-                <option value="Ropa">Ropa</option>
-                <option value="Actividades">Actividades</option>
-                <option value="Material">Material</option>
-                <option selected value="Otros">Otros</option>
-            </select>
+        <div id="elementosDinamicos[]" name="elementosDinamicos[]">
+            <div name="elemento0" name="elemento0">
+                <input class="nuevo_producto_valor" type="text" id="nombreproducto" name="nombreproducto" placeholder="Nombre del producto" required>
+                <input class="nuevo_producto_valor" type="number" id="cantidad" name="cantidad" placeholder="Cantidad" required>
+                <input class="nuevo_producto_valor" type="number" id="precio" name="precio" step="0.01" placeholder="Precio por unidad" required>
+                <select class="select-transaccion" id="categoria" name="categoria" required>
+                    <option value="Comida">Comida</option>
+                    <option value="Vivienda">Vivienda</option>
+                    <option value="Ropa">Ropa</option>
+                    <option value="Actividades">Actividades</option>
+                    <option value="Material">Material</option>
+                    <option selected value="Otros">Otros</option>
+                </select>
+            <hr>
+            </div>
         </div>
 
         <!-- Botones para añadir y quitar elementos -->
-        <button type="button" onclick="agregarCampo()">Agregar Elemento</button>
-        <button type="button" onclick="quitarCampo()">Quitar Elemento</button>
+        
 
         <br>
 
         <button>Crear</button>
         <p id="erroreak" class="error_message">
-            <div class="error_message">{{ datos['error'] }}</div>
+            <div class="error_message"></div>
         </p>
-        <p>{{ datos['datos']['mensaje'] }}</p>   
+        <p></p>   
     </fieldset>
 </form> 
 <script>
     // Función para agregar un nuevo campo al formulario
     function agregarCampo() {
-        var contenedor = document.getElementById("elementosDinamicos");
+        var contenedor = document.getElementById("elementosDinamicos[]");
+        var elementosActuales = contenedor.children.length;
         var nuevoCampo = document.createElement("div");
+        nuevoCampo.name = "elemento" + elementosActuales
+        nuevoCampo.id = "elemento" + elementosActuales
 
         // Agregar campos al nuevo div
         nuevoCampo.innerHTML = `
-            <hr>
-            <input class="nuevo_producto_valor" type="text" id="nombreproducto[]" name="nombreproducto[]" placeholder="Nombre del producto" required>
-            <input class="nuevo_producto_valor" type="number" id="cantidad[]" name="cantidad[]" placeholder="Cantidad" required>
-            <input class="nuevo_producto_valor" type="number" id="precio[]" name="precio[]" step="0.01" placeholder="Precio por unidad" required>
-            <select class="select-transaccion" id="miSeleccion[]" name="miSeleccion[]" required>
+            <input class="nuevo_producto_valor" type="text" id="nombreproducto" name="nombreproducto" placeholder="Nombre del producto" required>
+            <input class="nuevo_producto_valor" type="number" id="cantidad" name="cantidad" placeholder="Cantidad" required>
+            <input class="nuevo_producto_valor" type="number" id="precio" name="precio" step="0.01" placeholder="Precio por unidad" required>
+            <select class="select-transaccion" id="categoria" name="categoria" required>
                 <option value="Comida">Comida</option>
                 <option value="Vivienda">Vivienda</option>
                 <option value="Ropa">Ropa</option>
@@ -65,20 +69,22 @@
                 <option value="Material">Material</option>
                 <option selected value="Otros">Otros</option>
             </select>
-        `;
+            <button type="button" onclick="quitarCampo(${elementosActuales})">Quitar Elemento</button>
+        <hr>
+    `;
 
         contenedor.appendChild(nuevoCampo);
         
     }
 
     // Función para quitar el último campo del formulario
-    function quitarCampo() {
-        var contenedor = document.getElementById("elementosDinamicos");
-        var elementos = contenedor.getElementsByTagName("div");
+    function quitarCampo(indice) {
+        var contenedor = document.getElementById("elementosDinamicos[]");
+        var elemento = document.getElementById("elemento" + indice);
 
-        // Asegúrate de que haya al menos un elemento antes de intentar quitar
-        if (elementos.length > 0) {
-            contenedor.removeChild(elementos[elementos.length - 1]);
+        // Asegúrate de que el elemento exista antes de intentar quitarlo
+        if (elemento) {
+            contenedor.removeChild(elemento);
         }
     }
 </script>
