--- a/app/templates/transaction_menu.html
+++ b/app/templates/transaction_menu.html
@@ -18,24 +18,10 @@
         
         <h2 class="fs-subtitle">Productos</h2>
 
-        <div id="elementosDinamicos[]" name="elementosDinamicos[]">
-            <div name="elemento0" name="elemento0">
-                <input class="nuevo_producto_valor" type="text" id="nombreproducto" name="nombreproducto" placeholder="Nombre del producto" required>
-                <input class="nuevo_producto_valor" type="number" id="cantidad" name="cantidad" placeholder="Cantidad" required>
-                <input class="nuevo_producto_valor" type="number" id="precio" name="precio" step="0.01" placeholder="Precio por unidad" required>
-                <select class="select-transaccion" id="categoria" name="categoria" required>
-                    <option value="Comida">Comida</option>
-                    <option value="Vivienda">Vivienda</option>
-                    <option value="Ropa">Ropa</option>
-                    <option value="Actividades">Actividades</option>
-                    <option value="Material">Material</option>
-                    <option selected value="Otros">Otros</option>
-                </select>
-            <hr>
-            </div>
-        </div>
+        <div id="elementosDinamicos[]" name="elementosDinamicos[]"></div>
 
         <!-- Botones para añadir y quitar elementos -->
+        <button type="button"  onclick="agregarCampo()">Agregar Elemento</button>
         
 
         <br>
@@ -53,15 +39,18 @@
         var contenedor = document.getElementById("elementosDinamicos[]");
         var elementosActuales = contenedor.children.length;
         var nuevoCampo = document.createElement("div");
-        nuevoCampo.name = "elemento" + elementosActuales
         nuevoCampo.id = "elemento" + elementosActuales
+        nuevoCampo.tagName = "elemento" + elementosActuales
+        nuevoCampo.localName= "elemento" + elementosActuales
+        nuevoCampo.nodeName= "elemento" + elementosActuales
+        nuevoCampo.name = "elemento" + elementosActuales
 
         // Agregar campos al nuevo div
         nuevoCampo.innerHTML = `
-            <input class="nuevo_producto_valor" type="text" id="nombreproducto" name="nombreproducto" placeholder="Nombre del producto" required>
-            <input class="nuevo_producto_valor" type="number" id="cantidad" name="cantidad" placeholder="Cantidad" required>
-            <input class="nuevo_producto_valor" type="number" id="precio" name="precio" step="0.01" placeholder="Precio por unidad" required>
-            <select class="select-transaccion" id="categoria" name="categoria" required>
+            <input class="nuevo_producto_valor" type="text" id="nombreproducto${elementosActuales}" name="nombreproducto${elementosActuales}" placeholder="Nombre del producto" required>
+            <input class="nuevo_producto_valor" type="number" id="cantidad${elementosActuales}" name="cantidad${elementosActuales}" placeholder="Cantidad" required>
+            <input class="nuevo_producto_valor" type="number" id="precio${elementosActuales}" name="precio${elementosActuales}" step="0.01" placeholder="Precio por unidad" required>
+            <select class="select-transaccion" id="categoria${elementosActuales}" name="categoria${elementosActuales}" required>
                 <option value="Comida">Comida</option>
                 <option value="Vivienda">Vivienda</option>
                 <option value="Ropa">Ropa</option>
