--- a/app/templates/project_menu.html
+++ b/app/templates/project_menu.html
@@ -1,28 +1,39 @@
-{% extends 'layout.html' %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Menu del proyecto</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/proyecto.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='image/user.jpg') }}">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
-{% block title %}Proyectos{% endblock %}
-
-{% block content %}
-
-
-<h2>Total de presupuesto utilizado:</h2>
-<div class="contenedor-donuts">
-  <div class="svg-item">
-    <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
-      <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
-      <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="2 98" stroke-dashoffset="25"></circle>
-      <g class="donut-text donut-text-2">
-  
-        <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent">2%</tspan>   
-        </text>
-        <text y="60%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-data">1500 widgets</tspan>   
-        </text>
-      </g>
-    </svg>
-  </div>
-
-      
-{% endblock %}
+	</head>
+	<body class="loggedin">
+        <header>
+            <img width="60px" src="{{ url_for('static', filename='image/user.jpg') }}">
+            <p>{{ datos['user'] }}</p>
+        </header>
+		<nav class="navtop">
+			<div>
+				<p>ID del proyecto: {{ datos['idproyecto'] }}</p>
+				<h1><a href="{{ url_for('user_menu') }}"><i class="fas fa-home"></i> Menu de proyectos</a></h1>
+				<h1><a href="{{ url_for('project_menu') }}"><i class="fas fa-lightbulb"></i> Información de proyecto</a></h1>
+				<h1><a href="{{ url_for('list_transaction') }}"><i class="fas fa-circle"></i> Listado de transacciones </a></h1>
+				<h1><a href="{{ url_for('dashboards') }}"><i class="fas fa-circle"></i> Dashboards </a></h1>
+				<h1><a href="{{ url_for('transaction_menu') }}"><i class="fas fa-euro-sign"></i> Nueva transacción</a></h1>
+				<h1><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a></h1>
+			</div>
+			
+		</nav>
+		<div class="content-menu">
+      <h1 >ID del proyecto:</h1>
+      <h1 >{{ datos['idproyecto'] }}</h1>
+      <br>
+      <h2 >Presupuesto restante: {{ datos['presupuesto'] }}</h2>
+		</div>
+		
+	</body>
+</html>
