--- a/app/templates/dashboards.html
+++ b/app/templates/dashboards.html
@@ -4,18 +4,18 @@
 
 {% block content %}
 
-
+{{datos}}
 <h2>Total de presupuesto utilizado:</h2>
 <div class="contenedor-donuts">
   <div class="svg-item">
     <svg width="60%" height="60%" viewBox="0 0 40 40" class="donut">
       <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#202631"></circle>
       <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
-      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="{{ datos['datos']['utilizado']}} {{ datos['datos']['restante'] }}" stroke-dashoffset="25"></circle>
+      <circle class="donut-segment donut-segment-3" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5" stroke-dasharray="{{ datos['datos']['porcentaje_total']}} {{ 100-datos['datos']['porcentaje_total'] }}" stroke-dashoffset="25"></circle>
       <g class="donut-text donut-text-2">
   
         <text y="50%" transform="translate(0, 2)">
-          <tspan x="50%" text-anchor="middle" class="donut-percent">{{ datos['datos']['utilizado'] }}%</tspan>   
+          <tspan x="50%" text-anchor="middle" class="donut-percent">{{ datos['datos']['porcentaje_total'] }}%</tspan>   
         </text>
         <text y="60%" transform="translate(0, 2)">
           <tspan x="50%" text-anchor="middle" class="donut-data">Utilizado</tspan>   
