--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
       </header>
       <div class="container">
         <div class="message signup">
-        <div class="form--heading">Welcome back! </div>
+        <div class="form--heading">LOGIN </div>
           <form autocomplete="off" id=formulario1 method="POST" action="{{ url_for('login') }}">
             <input type="email" id="email2" name="email2" placeholder="Email">
             <!--input type="text" id="nombre2" name="nombre2" placeholder="Nombre"-->
@@ -29,7 +29,7 @@
           </form>
         </div>
         <div class="form form--signup">
-          <div class="form--heading">Welcome! Sign Up</div>
+          <div class="form--heading">REGISTRO</div>
           <form autocomplete="off" id="formulario" method="POST" action="{{ url_for('register') }}">
             <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
             <!--input type="text" id="nombregrupo" placeholder="Nombre del grupo" required-->
