--- a/app/templates/user_menu.html
+++ b/app/templates/user_menu.html
@@ -25,7 +25,7 @@
         </div>
 		<div class="contenedor-botones">
 			<button class="create_button"><a href="{{ url_for('create_project') }}">Crear nuevo proyecto</a></button>
-			<button class="create_button"><a href="{{ url_for('join_project') }}">Acceder a proyecto nuevo</a></button>
+			<button class="create_button"><a href="{{ url_for('join_project') }}">Acceder a proyecto</a></button>
 		</div>
 		<br>
 {% endblock %}
