--- a/app/templates/layout2.html
+++ b/app/templates/layout2.html
@@ -17,7 +17,7 @@
         </header>
 		<nav class="navtop">
 			<div>
-				<a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
+				<a href="{{ url_for('logout') }}"><i class="fas fa-user-circle"></i>Logout</a>
 			</div>
 		</nav>
 			{% block content %}{% endblock %}
