--- a/app/templates/transaction_menu.html
+++ b/app/templates/transaction_menu.html
@@ -24,8 +24,8 @@
         
 
         <br>
-
-        <button>Crear</button>
+        <br>
+        <button class="crear-transaccion">Crear</button>
         <p id="erroreak" class="error_message">
             <div class="error_message"></div>
         </p>
