--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400");
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 body,
 .message,
@@ -12,11 +13,34 @@ form {
 }
 
 body {
-  background: #29a37a;
+  background: #07855d;
   font-family: "Source Sans Pro", sans-serif;
   overflow: scroll;   
   
 }
+.mi-titulo {
+  font-size: 55px; /* Tamaño de la letra en píxeles */
+  font-family: "Latin Modern Roman"; /* Tipo de letra */
+  /* Otros estilos opcionales, como color, peso de la fuente, etc. */
+  color: #fff; /* Color del texto en formato hexadecimal */
+  font-weight: bold; /* Peso de la fuente (normal, bold, etc.) */
+}
+.mi-titulo-interno {
+  font-size: 35px; /* Tamaño de la letra en píxeles */
+  font-family: "Latin Modern Roman"; /* Tipo de letra */
+  /* Otros estilos opcionales, como color, peso de la fuente, etc. */
+  color: #fff; /* Color del texto en formato hexadecimal */
+}
+
+.contenedor-botones {
+  display: flex; /* Utilizar flexbox para alinear elementos en línea */
+  width: 60%;
+}
+
+/* Estilo para cada botón */
+
+
+
 
 .navtop {
   background-color: #02281c;
@@ -205,7 +229,13 @@ margin: 0 0 10px 0;
     margin: 5px 0;
   }
 }
-
+.heading{
+  font-size: 35px;
+  height: 50px;
+  font-weight: bold;
+  color: #129D72;
+  font-family: "Source Sans Pro", sans-serif;
+}
 .signup {
   &:before {
     opacity: 0.3;
@@ -229,10 +259,10 @@ margin: 0 0 10px 0;
   height: 100%;
   
 
-
   &--heading {
-    font-size: 25px;
+    font-size: 35px;
     height: 50px;
+    font-weight: bold;
     color: #129D72;
     font-family: "Source Sans Pro", sans-serif;
   }
@@ -241,10 +271,12 @@ margin: 0 0 10px 0;
     border-right: 1px solid #999;
   }
 }
-.form .error_message {
+
+.error_message {
+  text-align: center;
 	margin: 15px 0 0;
 	color: #ff0000;
-	font-size: 12px;
+	font-size: 14px;
 }
 
 form {
@@ -306,10 +338,28 @@ form {
   font-family: "Source Sans Pro", sans-serif;
   cursor: pointer;
 }
-.button boton-delete{
-  display: flex;
+.crear-transaccion{
+  width: 100%;
+  height: 60px;
+  border: 0;
+  outline: 0;
+  color: white;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  position: relative;
+  z-index: 3;
+  background: #02281c;
+  font-family: "Source Sans Pro", sans-serif;
+  cursor: pointer;
+}
+.crear-transaccion:hover,.crear-transaccion:active {
+  background: #07855d;
+}
+.delete_button {
+  height: fit-content;
   justify-content: center;
-  background-color: #c9bebe;
+  background-color: #a7d9c9;
 }
 table{
   margin:auto;
@@ -323,7 +373,7 @@ table{
 table th{
   font-family: Arial;
   font-size: 20px;
-  width: max-content;
+  width: 200px;
   text-align: center;
 }
 
