--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,12 +21,11 @@
 			<div>
 				<p>ID del proyecto: {{ datos['idproyecto'] }}</p>
 				<h1><a href="{{ url_for('user_menu') }}"><i class="fas fa-home"></i> Menu de proyectos</a></h1>
-				<p>          </p>
 				<h1><a href="{{ url_for('project_menu') }}"><i class="fas fa-lightbulb"></i> Información de proyecto</a></h1>
-				<h1><a href="{{ url_for('dashboards') }}"><i class="fas fa-circle"></i> Dashboards </a></h1>
-				<h1><a href="{{ url_for('list_transaction') }}"><i class="fas fa-circle"></i> Listado de transacciones </a></h1>
+				<h1><a href="{{ url_for('dashboards') }}"><i class="fas fa-check-circle"></i> Dashboards </a></h1>
+				<h1><a href="{{ url_for('list_transaction') }}"><i class="fas fa-digital-tachograph"></i> Listado de transacciones </a></h1>
 				<h1><a href="{{ url_for('transaction_menu') }}"><i class="fas fa-euro-sign"></i> Nueva transacción</a></h1>
-				<h1><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a></h1>
+				<h1><a href="{{ url_for('logout') }}"><i class="fas fa-user-circle"></i>Logout</a></h1>
 			</div>
 			<p>Presupuesto restante: {{ datos['presupuesto'] }} </p>
 		</nav>
